delete api addition

--- a/src/components/FileManagement.css
+++ b/src/components/FileManagement.css
@@ -30,3 +30,9 @@ button {
 button:hover {
     background-color: #0056b3;
 }
+button.delete {
+    background-color: #dc3545;
+}
+button.delete:hover {
+    background-color: #c82333;
+}
